[gd_scene load_steps=2 format=3 uid="uid://dp54o33w87lwm"]

[ext_resource type="Script" path="res://upgrade_Menu.gd" id="1_d7yq6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d7yq6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -246.0
offset_right = 401.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Tower Purchase & Upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower Tree 1" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_right = 169.0
grow_vertical = 0

[node name="Tower1" type="Label" parent="Panel/Tower Tree 1"]
layout_mode = 2
text = "Shooter Tower
"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="Panel/Tower Tree 1/Tower1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_top = 66.0
offset_right = 84.5
offset_bottom = 97.0
grow_horizontal = 2
text = "BUILD (5)"

[node name="Button2" type="Button" parent="Panel/Tower Tree 1/Tower1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = 141.5
offset_right = 76.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
text = "Upgrade 1 (10)
"

[node name="Button3" type="Button" parent="Panel/Tower Tree 1/Tower1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = 223.0
offset_right = 75.5
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 0
text = "Upgrade 2 (15)
"

[node name="Tower Tree 2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -400.0
offset_right = 84.5
grow_horizontal = 2
grow_vertical = 0

[node name="Tower1" type="Label" parent="Panel/Tower Tree 2"]
layout_mode = 2
text = "Bomber Tower
"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="Panel/Tower Tree 2/Tower1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_top = 66.0
offset_right = 84.5
offset_bottom = 97.0
grow_horizontal = 2
text = "BUILD (5)"

[node name="Button2" type="Button" parent="Panel/Tower Tree 2/Tower1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = 141.5
offset_right = 76.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
text = "Upgrade 1 (10)"

[node name="Button3" type="Button" parent="Panel/Tower Tree 2/Tower1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = 223.0
offset_right = 75.5
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 0
text = "Upgrade 2 (15)"

[node name="Tower Tree 3" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -169.0
offset_top = -400.0
grow_horizontal = 0
grow_vertical = 0

[node name="Tower" type="Label" parent="Panel/Tower Tree 3"]
layout_mode = 2
text = "Waver Tower
"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="Panel/Tower Tree 3/Tower"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_top = 66.0
offset_right = 84.5
offset_bottom = 97.0
grow_horizontal = 2
text = "BUILD (5)"

[node name="Button2" type="Button" parent="Panel/Tower Tree 3/Tower"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = 141.5
offset_right = 76.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
text = "Upgrade 1 (10)
"

[node name="Button3" type="Button" parent="Panel/Tower Tree 3/Tower"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = 223.0
offset_right = 75.5
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 0
text = "Upgrade 2 (15)
"

[connection signal="pressed" from="Panel/Tower Tree 1/Tower1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 1/Tower1/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 1/Tower1/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 2/Tower1/Button1" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 2/Tower1/Button2" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 2/Tower1/Button3" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 3/Tower/Button1" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 3/Tower/Button2" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Panel/Tower Tree 3/Tower/Button3" to="." method="_on_button_9_pressed"]
